fix(packages/app): green and cyan text colors with high contrast
Part of #2507

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -3,7 +3,7 @@
 }
 ::selection {
   background-color: var(--color-selection-background);
-  color: var(--color-selection-foreground);
+  color: inherit;
 }
 html,
 body,
